// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/components/Folders should render a list of TouchableHighlights if there is data 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 0,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <FolderButtonContainer
      folder={
        Object {
          "id": 1,
          "name": "foo",
        }
      }
    />
    <FolderButtonContainer
      folder={
        Object {
          "id": 2,
          "name": "bar",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`app/components/Folders should render a loader if there is no data 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <LoadingIndicator />
  </View>
</RCTScrollView>
`;
